New Commands: DCONTOUR, SAVEFITS, STRTIM Contours pane in Preferences is now populated. Contour settings added to settings. Contours can be displayed through DCONTOUR command or <cmnd>3 oma now can read and write FITS files. libcfitsio is added to frameworks. new methods added to Image: getspec(int) and getvalue(int)

--- a/oma2/oma2/en.lproj/MainMenu.xib
+++ b/oma2/oma2/en.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19162" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19162"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -180,6 +180,11 @@
                                     <action selector="plotCols:" target="536" id="NZB-CX-UG0"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Plot Contours" keyEquivalent="3" id="TBK-pt-q41">
+                                <connections>
+                                    <action selector="plotContours:" target="536" id="Q8o-Mf-FNY"/>
+                                </connections>
+                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
@@ -259,7 +264,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <clipView key="contentView" drawsBackground="NO" id="xhp-Yd-C0p">
                             <rect key="frame" x="1" y="1" width="583" height="352"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" allowsUndo="YES" allowsNonContiguousLayout="YES" id="539" customClass="CommandView">
                                     <rect key="frame" x="0.0" y="0.0" width="583" height="352"/>
@@ -283,12 +288,13 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="541">
-                            <rect key="frame" x="583" y="1" width="16" height="352"/>
+                            <rect key="frame" x="584" y="1" width="15" height="352"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                 </subviews>
             </view>
+            <point key="canvasLocation" x="140" y="278"/>
         </window>
         <customObject id="536" customClass="AppController">
             <connections>
