--- a/oma2/oma2/ZwoOptions.xib
+++ b/oma2/oma2/ZwoOptions.xib
@@ -9,6 +9,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="ZwoOptions">
             <connections>
                 <outlet property="balanceValues" destination="RJa-wf-7TQ" id="k4J-0K-dLi"/>
+                <outlet property="changeGainControl" destination="VBc-hb-IRT" id="4Fq-0D-98l"/>
                 <outlet property="changeSetControl" destination="efV-rv-6JP" id="qsU-t5-4sr"/>
                 <outlet property="coolerPercentValue" destination="SSb-QH-WdT" id="tF1-gp-N4o"/>
                 <outlet property="enableAntiDew" destination="DQN-fl-pRm" id="PcF-i7-XoY"/>
@@ -74,7 +75,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wtn-86-Jdh">
-                        <rect key="frame" x="162" y="201" width="64" height="21"/>
+                        <rect key="frame" x="155" y="162" width="64" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="exposure" drawsBackground="YES" id="iqz-dp-Wfe">
                             <font key="font" metaFont="system"/>
@@ -83,7 +84,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ZV-CB-dP5">
-                        <rect key="frame" x="162" y="166" width="64" height="21"/>
+                        <rect key="frame" x="141" y="198" width="64" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="gain" drawsBackground="YES" id="xEG-nf-jzQ">
                             <font key="font" metaFont="system"/>
@@ -128,6 +129,15 @@
                             <action selector="changeSetPoint:" target="-2" id="LQF-Bi-g9f"/>
                         </connections>
                     </stepper>
+                    <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VBc-hb-IRT">
+                        <rect key="frame" x="210" y="195" width="19" height="28"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <stepperCell key="cell" continuous="YES" alignment="left" increment="50" maxValue="650" id="lFd-W1-iV0">
+                            <connections>
+                                <action selector="changeGain:" target="-2" id="rFi-0p-VoH"/>
+                            </connections>
+                        </stepperCell>
+                    </stepper>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rGE-6K-2ny">
                         <rect key="frame" x="96" y="318" width="59" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -146,17 +156,8 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ntZ-Gi-ceF">
-                        <rect key="frame" x="18" y="204" width="61" height="16"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="Exposure" id="4eh-68-ZCG">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dK1-4h-rIJ">
-                        <rect key="frame" x="18" y="169" width="32" height="16"/>
+                        <rect key="frame" x="18" y="201" width="32" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Gain" id="Sgb-YI-Qh7">
                             <font key="font" metaFont="system"/>
@@ -213,6 +214,15 @@
                             <action selector="clearBadChanged:" target="-2" id="sve-V3-fnX"/>
                         </connections>
                     </button>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ntZ-Gi-ceF">
+                        <rect key="frame" x="18" y="165" width="61" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="Exposure" id="4eh-68-ZCG">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
             </view>
             <connections>
